--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,7 +21,8 @@
         "analysis_options.yaml": true,
         "pubspec.lock": true,
         "README.md": true,
-        "weather_app.iml": true
+        "weather_app.iml": true,
+        "build": true
     },
     "hide-files.files": [
         "linux",
@@ -39,6 +40,8 @@
         "analysis_options.yaml",
         "pubspec.lock",
         "README.md",
-        "weather_app.iml"
-    ]
+        "weather_app.iml",
+        "build"
+    ],
+    "autoHide.autoHideSideBar": true
 }
