--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,13 @@ dependencies:
   dio: ^5.7.0
   flutter_bloc: ^8.1.6
 
-  flutter_svg: ^2.0.16
+  flutter_svg: ^2.0.17
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   intl: ^0.20.2
+  shared_preferences: ^2.5.2
+  geolocator: ^13.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
