--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,5 +39,5 @@
         "weather_app.iml",
         "devtools_options.yaml"
     ],
-    "autoHide.autoHideSideBar": true
+    "autoHide.autoHideSideBar": false
 }
